fixed alignment issue

--- a/src/styles/careers.module.css
+++ b/src/styles/careers.module.css
@@ -79,14 +79,20 @@ ul.careerList .career img {
 
 .benefitsWrapper {
   margin-bottom: 100px;
+  max-width: 1700px;  
+  width: 95%;
+  margin: auto;
+  margin-bottom: 100px;
 }
 
 .benefitsWrapper h1 {
-  margin-left: 10px;  
   margin-right: 10px;  
   text-align: center;
   font-weight: 400;
   padding-bottom: 50px;   
+  /* margin-left: 10px;   */
+  padding-left: 20px;  
+  width: 95%;  
 }
 
 .benefitsWrapper ul {  
@@ -97,7 +103,7 @@ ul.careerList .career img {
   padding-left: 0;  
   padding-left: 0;
   margin-left: 0;
-  margin: 0 10px    
+  margin: 0 10px      
 }
 
 .benefitsWrapper ul li {    
@@ -121,14 +127,19 @@ ul.careerList .career img {
 }
 
 
-/* .applyWrapper {
-  margin: 0;
-} */
+.applyWrapper {  
+  max-width: 1700px;  
+  width: 95%;
+  margin: auto;    
+}
 
 .applyWrapper h1 {
   padding-bottom: 75px;
   text-align: center;
   font-weight: 400;  
+  padding-left: 20px;  
+  width: 95%;
+  margin: 0;
 }
 
 .form {
@@ -256,7 +267,7 @@ ul.careerList .career img {
   .benefitsWrapper h1 {
     text-align: left;
     /* margin-left: 5%; */
-    margin: auto;
+    /* margin: auto; */
     width: 95%;
     padding-left: 20px;
   }
@@ -278,9 +289,9 @@ ul.careerList .career img {
   
   .applyWrapper h1 {
     text-align: left;
-    margin: auto;
     width: 95%;
     padding-left: 20px;
+    /* margin: auto; */
   }
   .applyWrapper .form {
     margin-left: 15%;       
